--- a/coloursfoto/static/css/colours.css
+++ b/coloursfoto/static/css/colours.css
@@ -118,8 +118,9 @@ ul.breadcrumb li a:hover {
 
 /* The sidebar menu */
 .sidenav {
-    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-    z-index: 1; /* Stay on top */
+    /*position: fixed;  Fixed Sidebar (stay in place on scroll) */
+    position: relative;
+    /*z-index: 1;  Stay on top */
     overflow-x: hidden; /* Disable horizontal scroll */
     padding: 0;
 }
@@ -160,6 +161,72 @@ ul.breadcrumb li a:hover {
 	text-align: center;
 	padding: 8px;
 	margin-bottom: 10px;
+}
+
+.control {
+    display: block;
+    position: relative;
+    padding-left: 30px;
+    /*margin-bottom: 100px;*/
+    padding-top: 0px;
+    cursor: pointer;
+    font-size: 17px;
+}
+.control input {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+}
+.control_indicator {
+    position: absolute;
+    top: 2px;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background: #e6e6e6;
+    border: 0px solid #000000;
+}
+.control-radio .control_indicator {
+    border-radius: undefined%;
+}
+
+.control:hover input ~ .control_indicator,
+.control input:focus ~ .control_indicator {
+    background: #cccccc;
+}
+
+.control input:checked ~ .control_indicator {
+    background: #2aa1c0;
+}
+.control:hover input:not([disabled]):checked ~ .control_indicator,
+.control input:checked:focus ~ .control_indicator {
+    background: #0e6647d;
+}
+.control input:disabled ~ .control_indicator {
+    background: #e6e6e6;
+    opacity: 0.6;
+    pointer-events: none;
+}
+.control_indicator:after {
+    box-sizing: unset;
+    content: '';
+    position: absolute;
+    display: none;
+}
+.control input:checked ~ .control_indicator:after {
+    display: block;
+}
+.control-checkbox .control_indicator:after {
+    left: 8px;
+    top: 4px;
+    width: 3px;
+    height: 8px;
+    border: solid #ffffff;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+}
+.control-checkbox input:disabled ~ .control_indicator:after {
+    border-color: #7b7b7b;
 }
 
 @media only screen and (max-width: 992px) {
