--- a/coloursfoto/templates/cameras.html
+++ b/coloursfoto/templates/cameras.html
@@ -11,7 +11,8 @@
 
 	<div class="row">
 		<div class="mt-2 col-xs-12 col-md-3">
-			<div class="sidenav" data-spy="affix" data-offset-top="0">
+			<!-- <div class="sidenav" data-spy="affix" data-offset-top="0"> -->
+			<div class="sidenav">
 				<div id="categories">
 					<a href="{% url 'cameras' selected='compact' %}" id="compact">Compact</a>
 					<a href="{% url 'cameras' selected='digital-slr' %}" id="digital-slr">Digital SLR</a>
@@ -22,17 +23,45 @@
 				</div>
 
 				<div id="filter">
-					<div>FILTER BY BRAND</div>
-					canon<br>
-					nikon<br>
-					fujifilm<br>
-					etc
+					<div>BRAND</div>
+					<div class="control-group">
+				        <label class="control control-checkbox">
+				            Canon
+				            <input type="checkbox" checked="checked" />
+				            <div class="control_indicator"></div>
+				        </label>
+				        <label class="control control-checkbox">
+				            Nikon
+				            <input type="checkbox" />
+				            <div class="control_indicator"></div>
+				        </label>
+				        <label class="control control-checkbox">
+				            Fujifilm
+				            <input type="checkbox" />
+				            <div class="control_indicator"></div>
+				        </label>
+				        <label class="control control-checkbox">
+				            Sony
+				            <input type="checkbox" />
+				            <div class="control_indicator"></div>
+				        </label>
+				        <label class="control control-checkbox">
+				            GoPro
+				            <input type="checkbox" />
+				            <div class="control_indicator"></div>
+				        </label>
+				        <label class="control control-checkbox">
+				            Dji
+				            <input type="checkbox" />
+				            <div class="control_indicator"></div>
+				        </label>
+				    </div>
 				</div>
 			</div>
 
 		</div>
 		<div class="mt-2 col-xs-12 col-md-9">
-			<div style="height: 1000px">
+			<div>
 				<h3 id="selected-category-header"></h3>
 				200 items found/sort by/views
 				<hr>
@@ -50,7 +79,7 @@
         var $affixElement = $('div[data-spy="affix"]');
         $affixElement.width($affixElement.parent().width());
 
-        $('#cameras-container').css("min-height", $('.sidenav').height() + 50 + "px");
+        // $('#cameras-container').css("min-height", $('.sidenav').height() + 50 + "px");
 
         if($(window).width() <= 767){
         	$('.sidenav').css("position", "relative");
@@ -93,19 +122,19 @@
 
 	$(window).on('load scroll', function () {
 		// console.log(($(window).scrollTop() + $('.sidenav').height() )+ " " + ( $('body').height() - $('footer').height() - 100));
-		if($(window).width() > 767){
-			if($(window).scrollTop() + $('.sidenav').height() >= $('body').height() - $('footer').height() - 100){
-				$('.sidenav').css("position", "absolute");
-				if($('body').height() - $('footer').height() >= 618){
-					$('.sidenav').css("bottom", 0);
-				}	
-			}
-			else{
-				$('.sidenav').css("position", "fixed");
-				$('.sidenav').css("margin-top", 0);
-				$('.sidenav').css("bottom", "auto");
-			}
-		}
+		// if($(window).width() > 767){
+		// 	if($(window).scrollTop() + $('.sidenav').height() >= $('body').height() - $('footer').height() - 100){
+		// 		$('.sidenav').css("position", "absolute");
+		// 		if($('body').height() - $('footer').height() >= 618){
+		// 			$('.sidenav').css("bottom", 0);
+		// 		}	
+		// 	}
+		// 	else{
+		// 		$('.sidenav').css("position", "fixed");
+		// 		$('.sidenav').css("margin-top", 0);
+		// 		$('.sidenav').css("bottom", "auto");
+		// 	}
+		// }
 	});
 </script>
 {% endblock %}
